fix grid-gap

--- a/#src/sass/autoauction-online.sass
+++ b/#src/sass/autoauction-online.sass
@@ -35,7 +35,7 @@
             margin-bottom: 40px
         @media screen and (min-width: $desktopS)
             grid-template-columns: 120px 135px 120px 120px 153px 120px 166px
-            column-grid-gap: 68px
+            column-gap: 68px
 
         & > ul
             @media screen and (min-width: 0)
@@ -54,7 +54,7 @@
                     grid-auto-flow: column
                     grid-template-columns: 1fr 1fr
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr
-                    row-grid-gap: 24px
+                    row-gap: 24px
             @media screen and (min-width: $mobileL)
                 &.active
                     width: 488px
@@ -63,8 +63,8 @@
                     width: 656px
                     grid-template-columns: 1fr 1fr 1fr
                     grid-template-rows: 1fr 1fr 1fr 1fr
-                    column-grid-gap: 113px
-                    row-grid-gap: 24px
+                    column-gap: 113px
+                    row-gap: 24px
             @media screen and (min-width: $desktopS)
                 display: block
                 &.active
@@ -285,21 +285,21 @@
                     flex-wrap: wrap
                     @media screen and (min-width: 0)
                         max-width: 300px
-                        column-grid-gap: 35px
-                        row-grid-gap: 22px
+                        column-gap: 35px
+                        row-gap: 22px
                     @media screen and (min-width: $mobileM)
                         max-width: 332px
-                        column-grid-gap: 42px
-                        row-grid-gap: 24px
+                        column-gap: 42px
+                        row-gap: 24px
                     @media screen and (min-width: $mobileL)
                         max-width: 480px
                     @media screen and (min-width: $tabletS)
                         max-width: 294px
-                        column-grid-gap: 32px
+                        column-gap: 32px
                     @media screen and (min-width: 1250px)
                         max-width: 270px
-                        column-grid-gap: 23px
-                        row-grid-gap: 15px
+                        column-gap: 23px
+                        row-gap: 15px
                     @media screen and (min-width: $desktopM)
                         max-width: 305px
 
@@ -338,19 +338,19 @@
                         grid-gap: 20px
                     @media screen and (min-width: $mobileM)
                         max-width: 332px
-                        column-grid-gap: 28px
-                        row-grid-gap: 24px
+                        column-gap: 28px
+                        row-gap: 24px
                     @media screen and (min-width: $mobileL)
                         max-width: 480px
-                        column-grid-gap: 32px
-                        row-grid-gap: 20px
+                        column-gap: 32px
+                        row-gap: 20px
                     @media screen and (min-width: $tabletS)
                         max-width: 292px
                         grid-gap: 20px
                     @media screen and (min-width: 1250px)
                         max-width: 270px
-                        column-grid-gap: 16px
-                        row-grid-gap: 12px
+                        column-gap: 16px
+                        row-gap: 12px
                     @media screen and (min-width: $desktopM)
                         max-width: 305px
 
