--- a/#src/sass/contacts.sass
+++ b/#src/sass/contacts.sass
@@ -364,21 +364,21 @@
                 grid-auto-flow: column
                 grid-template-columns: 1fr 1fr
                 grid-template-rows: auto auto auto auto auto
-                grid-column-grid-gap: 26px
-                grid-row-grid-gap: 20px
+                grid-column-gap: 26px
+                grid-row-gap: 20px
             @media screen and (min-width: $tabletS)
                 grid-template-columns: 1.5fr 1fr 1fr
                 grid-template-rows: 1fr 1fr 1fr
-                grid-column-grid-gap: 41px
+                grid-column-gap: 41px
             @media screen and (min-width: $tabletM)
-                grid-column-grid-gap: 67px
+                grid-column-gap: 67px
                 grid-template-columns: 2fr 1fr 1fr
                 grid-template-rows: 1fr 1fr 1fr
             @media screen and (min-width: $desktopS)
                 grid-template-columns: 2fr 1fr 1fr
                 grid-template-rows: 1fr 1fr 1fr
-                grid-row-grid-gap: 22px
-                grid-column-grid-gap: 80px
+                grid-row-gap: 22px
+                grid-column-gap: 80px
 
             & > li
                 @media screen and (min-width: 0)
