--- a/#src/sass/product-page.sass
+++ b/#src/sass/product-page.sass
@@ -110,8 +110,8 @@
                         display: grid
                         grid-template-columns: 95px 10px
                         grid-template-rows: 1fr 1fr
-                        grid-column-grid-gap: 15px
-                        grid-row-grid-gap: 8px
+                        grid-column-gap: 15px
+                        grid-row-gap: 8px
                         background-color: white
                         box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1)
 
@@ -497,25 +497,25 @@
                     max-height: 1200px
                     grid-template-columns: 1fr 1fr
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
-                    grid-column-grid-gap: 35px
-                    grid-row-grid-gap: 16px
+                    grid-column-gap: 35px
+                    grid-row-gap: 16px
                 @media screen and (min-width: $mobileL)
                     max-height: 1054px
                 @media screen and (min-width: $tabletS)
                     max-height: 742px
                     grid-template-columns: 1fr 1.1fr 0.95fr
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
-                    grid-column-grid-gap: 41px
-                    grid-row-grid-gap: 20px
+                    grid-column-gap: 41px
+                    grid-row-gap: 20px
                 @media screen and (min-width: $tabletM)
                     max-height: 660px
-                    grid-column-grid-gap: 130px
+                    grid-column-gap: 130px
                 @media screen and (min-width: $desktopS)
                     grid-template-columns: 1fr 1fr 2fr
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr
                     max-height: 566px
-                    grid-row-grid-gap: 22px
-                    grid-column-grid-gap: 84px
+                    grid-row-gap: 22px
+                    grid-column-gap: 84px
 
                 & > li
                     font-size: 14px
